Replaced table with divs
Removed the table in favor of using divs. I refactored some of the JS to
work with the divs instead of the tds they had been working with but a
good amount of the JS is still targeted at tds.

I've got numbers randomly spawning and the distribution of 2s and 4s
seems good to me. The problem is that the random spawner occasionally
spawns a number in an occupied cell. This doesn't put two numbers in the
cell but it overwrites the contents of the cell. This can be seen by
constantly refreshing the page until the board spawns with only one
starting tile. It's possible this is caused by an array index problem
instead of randomly choosing the same cell but I doubt it.

--- a/2048.html
+++ b/2048.html
@@ -8,37 +8,35 @@
 </head>
 
 <body>
-    <div class="outer">
-    <div class="middle">
-    <div class="inner">
-        <table id="game-board">
-            <tr id="row1">
-                <td id="row1col1"></td>
-                <td id="row1col2"></td>
-                <td id="row1col3"></td>
-                <td id="row1col4"></td>
-            </tr>
-            <tr id="row2">
-                <td id="row2col1"></td>
-                <td id="row2col2"></td>
-                <td id="row2col3"></td>
-                <td id="row2col4"></td>
-            </tr>
-            <tr id="row3">
-                <td id="row3col1"></td>
-                <td id="row3col2"></td>
-                <td id="row3col3"></td>
-                <td id="row3col4"></td>
-            </tr>
-            <tr id="row4">
-                <td id="row4col1"></td>
-                <td id="row4col2"></td>
-                <td id="row4col3"></td>
-                <td id="row4col4"></td>
-            </tr>
-        </table>
-    </div>
-    </div>
+    <div class="page">
+        <div class="table">
+            <div class="board">
+                <div class="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+                <div class="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+                <div class="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+                <div class="row">
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                    <div class="cell"></div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
