--- a/2048.html
+++ b/2048.html
@@ -3,7 +3,7 @@
 <head>
     <title>2048</title>
     <script src="resources/jquery-2.1.1.js"></script>
-    <script src="resources/2048.js"></script>
+    <script src="resources/Board.js"></script>
     <link rel="stylesheet" type="text/css" href="resources/2048.css"></link>
 </head>
 
