Updated file structure
For issue #6.

Moved Board.js from /2048/Resources/ to /2048/Controllers/ and defined
the class within the namespace 2048.Controllers.

Updated the HTML to reference the new location of Board.js.

Keeping Driver.js in /2048/Resources/ and added comments explaining why.

--- a/2048.html
+++ b/2048.html
@@ -5,7 +5,8 @@
     <script src="resources/jquery-2.1.1.js"></script>
     <script src="resources/Common.js"></script>
     <script src="resources/Driver.js"></script>
-    <script src="resources/Board.js"></script>
+    <script src="Controllers/Board.js"></script>
+
     <link rel="stylesheet" type="text/css" href="resources/2048.css"></link>
 </head>
 
