Updating directory references
Updating the directory references to use the correct capitalization. It
was working fine without but it's better to be accurate.

--- a/2048.html
+++ b/2048.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>2048</title>
-    <script src="resources/jquery-2.1.1.js"></script>
-    <script src="resources/Common.js"></script>
-    <script src="resources/Driver.js"></script>
+    <script src="Resources/jquery-2.1.1.js"></script>
+    <script scr="Resources/Namespaces.js"></script>
+    <script src="Resources/Common.js"></script>
+    <script src="Resources/Driver.js"></script>
     <script src="Controllers/Board.js"></script>
 
     <link rel="stylesheet" type="text/css" href="resources/2048.css"></link>
