Too many changes
Far too many changes for a single commit. Things just got hairy.

board.js got a lot of changes in event handling and overall organization
of the file.
- Handlers for individual keypresses were removed. Now there's just one
handler which tosses the direction of the move to the tile and the tile
(hypothetically) knows how to move in that direction.
- Added a Tiles array to collect the tiles on the board.
- Added a TileBuffer to maintain the status of moving tiles without
disrupting the state of the Tiles array until the entire round of
movement has completed.
- Added a Cells array which contains the div elements which act as the
board's background.
- Created a Cell class which knows how to render itself based on its
position in the board.
- Added a function which calculates a Cell's or Tile's offset from the
top or left of the board based on its X or Y coordinate (column or row
position, respectively)
- Added wrapper functions around the offset function. GetLeft calculates
left offset by passing the GetOffset function the x coordinate. GetTop
calculates offset by passing the GetOffset function the y coordinate.
- GetValueAtPosition looks for a tile in Board's Tiles array with an
index matching the pos argument. If it finds one, it returns that tile's
Number. Else it returns an empty string.
- GetX and GetY find the X and Y coordinates of a tile or cell based on
its position on the board. Position, in this case, is the zero-based
index starting at the upper-left corner of the board and ending at the
lower-right corner.
- GetEmptyCells was completely rewritten to support the implementation
of the Tile class. It determines that a cell is empty by looking through
the Tiles array and returning unused indices between zero and
GRID_SQUARE ^ 2, inclusive.
- RandomSpawn instantiates a new Tile and adds it to Board's array of
Tiles. Tile's constructor handles placing the tile's markup in the DOM.

cell.js is brand new.
- Calls Board's offset functions to deter

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <title>2048</title>
     <script src="resources/jquery-2.1.1.js"></script>
-    <script src="data/enums/Directions.js"></script>
-    <script src="data/enums/Movement.js"></script>
-    <script src="resources/Driver.js"></script>
-    <script src="controllers/Board.js"></script>
+    <script src="resources/driver.js"></script>
+    <script src="resources/Colour.src.js"></script>
+
+    <script src="data/enums/directions.js"></script>
+    <script src="data/enums/movement.js"></script>
+
+    <script src="controllers/tile.js"></script>
+    <script src="controllers/board.js"></script>
+    <script src="controllers/cell.js"></script>
 
     <link rel="stylesheet" type="text/css" href="resources/2048.css"></link>
 </head>
@@ -15,30 +20,6 @@
     <div class="page">
         <div class="table">
             <div class="board">
-                <div class="row">
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                </div>
-                <div class="row">
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                </div>
-                <div class="row">
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                </div>
-                <div class="row">
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                    <div class="cell"></div>
-                </div>
             </div>
         </div>
     </div>
