--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="resources/Colour.src.js"></script>
 
     <script src="data/enums/directions.js"></script>
-    <script src="data/enums/movement.js"></script>
 
     <script src="controllers/tile.js"></script>
     <script src="controllers/board.js"></script>
@@ -19,8 +18,12 @@
 <body>
     <div class="page">
         <div class="table">
-            <div class="board">
-            </div>
+            2048
+            <div class="board"></div>
+            <p class="foot">Still being developed! Expect frequent bugs and/or complete breaks!</p>
+            <p class="foot">Use the arrow keys to move the tiles in that direction</p>
+            <p class="foot">Tiles with the same number merge into a single tile with double the original value</p>
+            <p class="foot">See how large you can make your tiles</p>
         </div>
     </div>
 </body>
